[package]
name = "linehash-edit"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "le"
path = "src/main.rs"

[[bin]]
name = "linehash-edit"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
xxhash-rust = { version = "0.8.15", features = ["xxh32"] }
